Send clicked message

--- a/app/index.html
+++ b/app/index.html
@@ -17,5 +17,9 @@
   </head>
   <body>
     <div id="app-notifier"></div>
+
+    <div class="send-msg-btn">
+      Send Message!
+    </div>
   </body>
 </html>
