Add receiver page

--- a/app/receiver.html
+++ b/app/receiver.html
@@ -11,17 +11,17 @@
     <!-- javaScripts -->
     <script src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
     <script src="src/app.js"></script>
-    <script src="src/sender.js"></script>
+    <script src="src/receiver.js"></script>
 
-    <title>Node WebSocket</title>
+    <title>Node WebSocket - Receiver</title>
   </head>
   <body>
     <div id="app-notifier"></div>
 
-    <div class="send-msg-btn">
-      Send Message!
+    <div class="messages">
+      <h3>Messages</h3>
     </div>
 
-    <a class="link-opener" href="./receiver.html" target="_blank">Open Receiver Page</a>
+    <a class="link-opener" href="./index.html" target="_blank">Open Sender Page</a>
   </body>
 </html>
